--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,5 +1,19 @@
 @font-face {
     font-family: 'Balthazar';
     src: url('./Balthazar-Regular.ttf') format('truetype');
-    font-weight: regular;
+    font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('./Roboto-Regular.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('./Roboto-Medium.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 500;
 }
